wrap long names in multi-selects - fix #4001

--- a/assets/sass/selectpicker.scss
+++ b/assets/sass/selectpicker.scss
@@ -9,9 +9,6 @@
     > input {
         min-width: unset;
     }
-    .item {
-        white-space: nowrap!important;
-    }
 }
 
 .ts-dropdown {
